Fix inverse tabs and tooltip letter-spacing

--- a/assets/scss/material/_tab.scss
+++ b/assets/scss/material/_tab.scss
@@ -72,11 +72,11 @@
       background-color: rgba(selection-theme-color(), $overlay-focus-white-opacity);
     }
 
-    &:active {
+    /* &:active {
       background-color: rgba(selection-theme-color(), $overlay-pressed-white-opacity);
       color: selection-theme-color(); // testing ripple
       opacity: 1;
-    }
+    } */
 
     // stylelint-disable
     &.flex-column {
