--- a/assets/scss/material/_tooltip.scss
+++ b/assets/scss/material/_tooltip.scss
@@ -29,6 +29,7 @@
   border-radius: $tooltip-border-radius;
   color: $tooltip-color;
   height: $tooltip-height; // 32px
+  letter-spacing: $letter-spacing-caption;
   line-height: $tooltip-height;
   padding: $tooltip-padding-y $tooltip-padding-x;
   transform: scale($tooltip-scale);
